# idle_signal

./: .gitmodules  CMakeLists.txt  imgui.ini  out.txt  readme.md  run.sh
assets/entities/: arms.json  box.json  fire.json  house.json  house2.json  skeleton.json  vampire.json
assets/models/: box.mtl  campfire.mtl  cottage_blender.mtl  fish.mtl  house_floor.mtl  test.mtl
assets/models/buildings/: 1.mtl  2.mtl  3.mtl
assets/models/bushes/: 1.mtl  2.mtl  3.mtl
assets/models/rocks/: 1.mtl  3.mtl
assets/models/trees/: 1.mtl  2.mtl  3.mtl
assets/models/with_animation/: arms.glb  holding_arms.glb  idle_arms.glb  picking_arms.glb  skeleton.fbx  skeleton.mtl
assets/textures/skybox/blink/: back.png~
include/: animation.hpp  audio.hpp  camera.hpp  collision.hpp  core.hpp  debugdraw.hpp  entity.hpp  hand.hpp  input.hpp  light.hpp  map.hpp  model.hpp  object.hpp  physics.hpp  renderer.hpp  resources.hpp  skybox.hpp  state.hpp  terrain.hpp  vertices.hpp  world.hpp
include/audio/: audio.hpp
include/core/: camera.hpp  core.hpp  state.hpp  window.hpp
include/map/: map.hpp
include/objects/: entity.hpp  model.hpp  object.hpp  skybox.hpp  terrain.hpp  vertex.hpp
include/physics/: collision.hpp  physics.hpp
include/player/: arms.hpp
include/shaders/: light.hpp  shader.hpp  texture.hpp
include/utils/: animation.hpp  input.hpp  log.hpp  renderer.hpp  resources.hpp
libs/: CMakeLists.txt  imgui_cmakefile.txt
libs/glad/: CMakeLists.txt  glad.c  glad.h
libs/stb/: stb_image.h.gch
media/: screenshot.png~
shaders/: blank.frag  blank.vert  cubemap.frag  cubemap.vert  default.frag  default.vert  default_texture.frag  default_texture.vert  skeletal.vert  text.frag  text.vert  wall_texture.vert
src/: audio.cpp  camera.cpp  entity.cpp  imgui_window.cpp  light.cpp  main.cpp  map.cpp  mesh.cpp  model.cpp  object.cpp  physics.cpp  resources.cpp  shaders.cpp  terrain.cpp  texture.cpp  vertex.cpp  window.cpp
src/audio/: audio.cpp  sound.cpp
src/core/: camera.cpp  main.cpp  window.cpp
src/map/: map.cpp  map_ui.cpp
src/objects/: entity.cpp  model.cpp  object.cpp  prepare_model.cpp  terrain.cpp  vertex.cpp
src/physics/: physics.cpp
src/player/: arms.cpp
src/shaders/: light.cpp  shaders.cpp  texture.cpp
src/utils/: animation.cpp  animator.cpp  bone.cpp  imgui_window.cpp  log.cpp  resources.cpp
